[package]
name = "teeny"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
sha2 = "0.9.8"
base64 = "0.13.0"
sled = "0.34.7"
anyhow = "1.0.45"
either = "1.6.1"
rand = "0.8.4"
addr = "0.15.0"
url = "2.2.2"
serde_json = "1"

[[bin]]
name = "import"
path = "src/import.rs"